--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>demo</title>
 </head>
 <body>
-    <a href="/sample1">sample1</a>
-    <a href="/sample2">sample2</a>
-    <a href="BaskinRobbins">BaskinRobbins</a>
+    <a href="/demo/sample1">sample1</a>
+    <a href="/demo/sample2">sample2</a>
+    <a href="/demo/BaskinRobbins">BaskinRobbins</a>
 </body>
 </html>
