--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="/demo/sample1">sample1</a>
     <a href="/demo/sample2">sample2</a>
     <a href="/demo/BaskinRobbins">BaskinRobbins</a>
+    <a href="/demo/brunch">brunch</a>
 </body>
 </html>
